// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer renders closed drawer 1`] = `
.c0 {
  background: var(--color-background);
  border-left: 1px solid rgba(255, 255, 255, 0.1);
  box-shadow: -4px 0 16px rgba(0, 0, 0, 0.15);
  display: flex;
  flex-direction: column;
  height: 100%;
  position: fixed;
  right: 0;
  top: 0;
  transform: translateX(100%);
  transition: transform 0.3s ease;
  width: 280px;
  z-index: 300;
}

<div
  aria-modal="true"
  class="c0"
  id="mobile-nav"
  role="dialog"
>
  <p>
    Content
  </p>
</div>
`;

exports[`DrawerTopBar matches snapshot 1`] = `
.c0 {
  align-items: center;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
  display: flex;
  flex-shrink: 0;
  justify-content: flex-end;
  padding: 0.75rem 1.5rem;
}

<div
  class="c0"
>
  <button>
    X
  </button>
</div>
`;

exports[`Overlay renders overlay when closed 1`] = `
.c0 {
  background: rgba(0, 0, 0, 0.5);
  inset: 0;
  opacity: 0;
  pointer-events: none;
  position: fixed;
  transition: opacity 0.3s ease;
  z-index: 200;
}

<div
  class="c0"
/>
`;

exports[`Overlay renders overlay when open 1`] = `
.c0 {
  background: rgba(0, 0, 0, 0.5);
  inset: 0;
  opacity: 1;
  pointer-events: all;
  position: fixed;
  transition: opacity 0.3s ease;
  z-index: 200;
}

<div
  class="c0"
/>
`;
